test/testdata/classes/instance/blank_property_access_error.lox
class Foo {
  bar() {
    // error: '_' is not a valid property name
    // lint error: '_' is not a valid property name
    print this._;
  }
}
var foo = Foo();
foo.bar();
